test-case.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns01
---
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: ns01
  labels:
    app: pod01
spec:
  containers:
    - name: container01
      image: nginx
      ports:
        - containerPort: 80
    - name: container02
      image: nicolaka/netshoot
      command: ["sleep", "3600"]
  nodeSelector:
    kubernetes.io/hostname: kube-worker1
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: ns01
  labels:
    app: pod02
spec:
  containers:
    - name: container03
      image: nginx
      ports:
        - containerPort: 80
  nodeSelector:
    kubernetes.io/hostname: kube-worker1
---
apiVersion: v1
kind: Service
metadata:
  name: svc01
  namespace: ns01
spec:
  selector:
    app: pod01
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: svc02
  namespace: ns01
spec:
  selector:
    app: pod02
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: default  # This Pod doesn't need a specific namespace, using default
  labels: 
    app: pod03
spec:
  containers:
    - name: container04
      image: nginx
      ports:
        - containerPort: 80
  nodeSelector:
    kubernetes.io/hostname: kube-worker2
---
# use ClusterIP svc tie to pod03
apiVersion: v1
kind: Service
metadata:
  name: svc03
  namespace: default
spec:
  selector:
    app: pod03
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 80
  type: ClusterIP
---
# use NodePort svc tie to pod03
apiVersion: v1
kind: Service
metadata:
  name: svc04
  namespace: default
spec:
  type: NodePort
  selector:
    app: pod03
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
